--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -2,6 +2,6 @@ gunicorn==19.7.1
 honcho==1.0.1
 newrelic>=2.66,<2.67
 
--e git+git://github.com/bmg1919/superdesk-core.git@v2.0.10#egg=superdesk-core
+-e git+git://github.com/bmg1919/superdesk-core.git@master#egg=superdesk-core
 -e git+git://github.com/superdesk/superdesk-planning.git@v2.0.0#egg=superdesk-planning
 -e git+git://github.com/superdesk/superdesk-analytics.git@v2.0.0#egg=superdesk-analytics
