--- a/client/package.json
+++ b/client/package.json
@@ -2,7 +2,7 @@
     "name": "superdesk",
     "license": "GPL-3.0",
     "dependencies": {
-        "superdesk-core": "github:bmg1919/superdesk-client-core#fe-dist",
+        "superdesk-core": "github:bmg1919/superdesk-client-core#v2.0.3",
         "superdesk-planning": "github:superdesk/superdesk-planning#v2.0.0",
         "superdesk-analytics": "github:superdesk/superdesk-analytics#v2.0.0"
     }
